Sun Dec 12 10:14:03 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/rdoc.rb (RDoc::RDoc::parse_files): Never exclude files
	  explicitly given on the command line.

Sat Dec 11 21:10:16 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb: add DRbRemoteError. [ruby-list:40348],
	  [ruby-list:40390]

	* test/drb/drbtest.rb: ditto.

	* test/drb/ut_drb.rb: ditto.

Sat Dec 11 13:08:28 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sample/optparse/subcommand.rb: a sample for sub commands like
	  cvs.  contributed by Minero Aoki.

Fri Dec 10 08:39:48 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/socket.c (sock_listen): get OpenFile just before calling
	  listen(2).

Thu Dec  9 16:28:35 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/sdbm/init.c (GetDBM): typo.

Thu Dec  9 16:21:51 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/cgi.rb (WEBrick::CGI#setup_header): avoid
	  SecurityError. [ruby-dev:24970]

	* lib/webrick/httpserver.rb (WEBrick::HTTPServer#run): should wait
	  for reading request till data arrive. [ruby-talk:121068]

Thu Dec  9 14:38:35 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_inspect): escape # which starts an expression
	  substitution.  fixed: [ruby-core:03922]

	* string.c (rb_str_dump): not escape # which isn't a substitution.

Thu Dec  9 12:31:53 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* io.c (pipe_open): should set prog if argc != 0.

Thu Dec  9 10:54:36 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/dbm/dbm.c (fdbm_select): [ruby-dev:25132]

	* ext/sdbm/init.c: ditto.

	* ext/gdbm/gdbm.c: ditto.

Thu Dec  9 10:19:18 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/socket/test_socket.rb (test_setsockopt): use SO_LINGER instead
	  of SO_BINDTODEVICE.  fixed: [ruby-dev:25133]

Thu Dec  9 03:08:36 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c (ip_init): set root-win title to "ruby" when